Updating Mandy image and adding three logos.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     },
     "author": "Kieran Brown",
     "license": "ISC",
-    "dependencies": {},
     "devDependencies": {
         "@babel/core": "^7.11.0",
         "@babel/preset-env": "^7.11.0",
@@ -26,7 +25,10 @@
         "lodash": "^4.17.19",
         "lodash.mergewith": ">=4.6.2",
         "mixin-deep": "^2.0.1",
-        "node-sass": "^4.14.1",
         "set-value": "^3.0.2"
+    },
+    "dependencies": {
+        "node-sass": "^9.0.0",
+        "sass": "^1.77.2"
     }
 }
