--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "dependencies": {
         "node-sass": "^9.0.0",
         "sass": "^1.77.2"
-    }
+    },
+    "engines": {
+        "node": "14.x"
+      }
 }
