--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "parcel": "^2.12.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "2.12.0"
+    "@parcel/packager-raw-url": "2.12.0",
+    "@parcel/transformer-sass": "2.12.0",
+    "@parcel/transformer-webmanifest": "2.12.0"
   },
   "license": "MIT"
 }
